home screen in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,15 @@
     <string name="app_name">BasicAppImpl</string>
     <string name="english">English</string>
     <string name="arabic">Arabic</string>
-    <string name="switch_language">Swtich Language</string>
+    <string name="switch_language">Switch Language</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    // home tabs
+    <string name="feeds">Feeds</string>
+    <string name="market_place">Marketplace</string>
+    <string name="forums">Forums</string>
+    <string name="notifications">Notifications</string>
 
 
 </resources>
